--- a/test/skins/drupal/en/popup/popup.css
+++ b/test/skins/drupal/en/popup/popup.css
@@ -1,4 +1,14 @@
-/* SVN $Id$ */
+/**
+ * Styles definition for the popup widget
+ *  
+ * @author    Creative Development LLC <info@cdev.ru> 
+ * @copyright Copyright (c) 2010 Creative Development LLC <info@cdev.ru>. All rights reserved
+ * @license   http://opensource.org/licenses/osl-3.0.php Open Software License (OSL 3.0)
+ * @version   SVN: $Id$
+ * @link      http://www.litecommerce.com/
+ * @see       ____file_see____
+ * @since     3.0.0
+ */
 
 .blockOverlay {
 	background: #000000 none;
