--- a/test/skins/drupal/en/subcategories/subcategories.css
+++ b/test/skins/drupal/en/subcategories/subcategories.css
@@ -1,35 +1,39 @@
 {* $Id$ *}
-.lc-subcategory-icons ul
+.lc-subcategory-icons
 {
 	list-style: none;
 }
 
+/*
+ * Information on hacks used below is available at:
+ * - http://blog.mozilla.com/webdev/2009/02/20/cross-browser-inline-block/
+ * - http://foohack.com/2007/11/cross-browser-support-for-inline-block-styling/
+ */
+
 .lc-subcategory-icons li
 {
-	padding: 0;
-	margin: 0 1em 1em 0;
+  adding: 0;
+  argin: 0 1em 1em 0;
 	vertical-align: top;
 	background-image: none;
-	/*
-     * Information on hacks used below is available at:
-	 * - http://blog.mozilla.com/webdev/2009/02/20/cross-browser-inline-block/
-	 * - http://foohack.com/2007/11/cross-browser-support-for-inline-block-styling/
-	 */
-	display: -moz-inline-stack;		/* Hack for FF2 */
+	display: -moz-inline-stack;		/* FF2 supports this instead of "inline-block" */
 	display: inline-block;
-	zoom: 1;						/* Hack for IE */
-	*display: inline;				/* Hack for IE */
 }
 
-.lc-subcategory-icons .lc-subcategory-name,
-.lc-subcategory-icons .lc-subcategory-image
+/* IE6 requires this in order to correctly display li as "inline-blocks */
+* html .lc-subcategory-icons li
 {
+  display: inline;
+}
+
+.lc-subcategory-icons a
+{
+  display: block;
 	text-align: center;
-	/*
-	 * Information on the hack used below is available at:
-	 * - http://blog.mozilla.com/webdev/2009/02/20/cross-browser-inline-block/
-	 * - http://foohack.com/2007/11/cross-browser-support-for-inline-block-styling/
-	 */
-	position: relative;				/* Hack for FF2 */
-	*position: static;				/* Hack for IE */
+}
+
+.lc-subcategory-icons a,
+.lc-subcategory-icons img
+{
+  position: relative;       /* Hack for FF2: in FF2 static "inner-blocks" are non-clickable */
 }
