M:0087491 [*] LC CMS: the breadcrumbs sybsystem revision is completed
git-svn-id: svn://svn.crtdev.local/repo/xlite/main@2147 194c3f1c-803d-db11-9c9e-000e0c8563f3

--- a/test/skins/default/en/style.css
+++ b/test/skins/default/en/style.css
@@ -168,17 +168,20 @@ Border color of dialog boxes
 }
 
 /*
-Titles of dialog boxes
-*/
+ * Titles of dialog boxes
+ */
 .DialogTitle {
-	FONT-WEIGHT: normal; FONT-SIZE: 12px; COLOR: #FFFFFF; FONT-FAMILY: Tahoma; 	BACKGROUND-COLOR: #2B7AA0;
+    color: #ffffff;
+    background-color: #2B7aa0;
+    padding: 3px;
 }
 
 /*
-Comments appearing in dialog titles
-*/
-.DialogTitleComment {
-	FONT-WEIGHT: normal; FONT-SIZE: 11px; COLOR: #082032
+ * Titles of dialog boxes (text)
+ */
+.DialogTitle a {
+    font-size: 12px;
+    color: #ffffff;
 }
 
 /*
