[!] In IE7 subcategory icons were displayed in one column, fixe
git-svn-id: svn://svn.crtdev.local/repo/xlite/main@2155 194c3f1c-803d-db11-9c9e-000e0c8563f3

--- a/test/skins/drupal/en/subcategories/subcategories.css
+++ b/test/skins/drupal/en/subcategories/subcategories.css
@@ -12,8 +12,8 @@
 
 .lc-subcategory-icons li
 {
-  adding: 0;
-  argin: 0 1em 1em 0;
+  padding: 0;
+  margin: 0 1em 1em 0;
 	vertical-align: top;
 	background-image: none;
 	display: -moz-inline-stack;		/* FF2 supports this instead of "inline-block" */
@@ -22,6 +22,12 @@
 
 /* IE6 requires this in order to correctly display li as "inline-blocks */
 * html .lc-subcategory-icons li
+{
+  display: inline;
+}
+
+/* IE7 requires this in order to correctly display li as "inline-blocks */
+*:first-child+html .lc-subcategory-icons li
 {
   display: inline;
 }
