--- a/test/skins/drupal/en/mini_cart/minicart.css
+++ b/test/skins/drupal/en/mini_cart/minicart.css
@@ -1,108 +1,76 @@
-/* Minicart block */
-
-.lc-minicart {
-    position: relative;
-    padding: 0.5em;
-}
-
-.lc-minicart li {
-    background-image: none;
-}
-
-/* Minicart title */
-
-.lc-minicart-title {
-    font-size: 12px;
-    font-weight: bold;
-    float: left;
-    margin: 0;
-    padding: 3px 0 0 0.5em;
-    clear: none;
-}
-
-/* Minicart toggle button */
-
-.lc-minicart .toggle-button {
-    width: 35px;
-    height: 24px;
-    margin: 0;
-    padding: 0;
-    background: transparent url(img/minicart-collapsed.gif) no-repeat top left;
-    float: left;
-    cursor: pointer;
-}
-
-.lc-minicart .expanded .toggle-button {
-    background: transparent url(img/minicart-expanded.gif) no-repeat top left;
-}
-
-.lc-minicart .empty .toggle-button {
-    background: transparent url(img/minicart-empty.gif) no-repeat top right;
-    width: 24px;
-    height: 24px;
-    cursor: auto;
-}
-
-.lc-minicart .empty p {
-    margin: 0;
-    padding: 1em 0 0 0;
-}
-
-/* Minicart items */
-
-.lc-minicart-items {
-    clear: both;
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-.lc-minicart .empty .lc-minicart-items {
-    border-bottom: none;
-}
-
-.lc-minicart .collapsed .lc-minicart-items {
+.lc-minicart .collapsed .items-list {
     display: none;
 }
 
-.lc-minicart-items ul {
-    padding-top: 1em;
-    list-style: none;
+.lc-minicart .cart-items
+{
+  position: relative;
+  z-index: 9999;
 }
 
-.lc-minicart-items ul li,
-.lc-minicart-items p {
-    padding: 0 0 1em 0;
+.lc-minicart .items-list ul
+{
+  list-style: none;
 }
 
-.lc-minicart-items .line-item {
-    display: block;
-}
-/* Minicart totals */
-
-.lc-minicart-totals {
-    clear: both;
-    padding: 1em 0 0 0;
+.lc-minicart .items-list .item-name
+{
+  display: block;
 }
 
-.lc-minicart-totals p {
-    padding: 0;
-    margin: 0;
+.lc-minicart .delimiter
+{
+  margin-left: 0.5em;
+  margin-right: 0.5em;
 }
 
-.lc-minicart-totals ul {
-    list-style: none;
-    padding: 0;
+.lc-minicart-horizontal .cart-link,
+.lc-minicart-horizontal .cart-items,
+.lc-minicart-horizontal .cart-totals,
+.lc-minicart-horizontal .lc-minilist,
+.lc-minicart-horizontal .cart-checkout
+{
+  float: left;
 }
 
-.lc-minicart-totals li {
-    margin: 0;
-    padding: 0;
-
+.lc-minicart-horizontal .cart-items
+{
+  margin-left: 0.5em;
 }
 
-/* Minicart buttons */
-
-.lc-minicart-links {
-    padding: 0.5em 0 0 0;
+.lc-minicart-horizontal .cart-checkout,
+.lc-minicart-horizontal .lc-minilist
+{
+  margin-left: 1em;
 }
+
+.lc-minicart-horizontal .items-list
+{
+  background: white;
+  padding: 1em;
+  width: 20em;
+  position: absolute;
+  right: 0;
+  top: 1.5em;
+  border-style: solid;
+}
+
+.lc-minicart-horizontal .cart-link img
+{
+  background: url(img/minicart.gif);
+}
+
+.lc-minicart-vertical h3,
+.lc-minilist-vertical h3
+{
+  margin: 0;
+  padding-left: 22px;
+  background: transparent url(img/minicart.gif) no-repeat 0px 6px;
+}
+
+.lc-minilist-vertical h3
+{
+  background-image: url(img/minilist.gif);
+  background-position: 0px 5px;
+}
+
