M:0087560 [*] LC CMS: widgets' subsystem code refactoring
git-svn-id: svn://svn.crtdev.local/repo/xlite/main@2243 194c3f1c-803d-db11-9c9e-000e0c8563f3

--- a/test/skins/drupal/en/products_list/products_list.css
+++ b/test/skins/drupal/en/products_list/products_list.css
@@ -94,6 +94,7 @@
 }
 
 .list-head .sort-box a {
+  text-decoration: none;
   font-size: 1.2em;
 }
 
@@ -250,6 +251,10 @@
 
 .list-body-table tr td.product-price-column {
   text-align: right;
+}
+
+.list-body-table tr td.product-name-column {
+  width: 100%;
 }
 
 /* Modal wait screen */
