--- a/test/skins/default/en/products_list/products_list.css
+++ b/test/skins/default/en/products_list/products_list.css
@@ -6,7 +6,7 @@
  * @author    Creative Development LLC <info@cdev.ru> 
  * @copyright Copyright (c) 2010 Creative Development LLC <info@cdev.ru>. All rights reserved
  * @license   http://opensource.org/licenses/osl-3.0.php Open Software License (OSL 3.0)
- * @version   SVN: $Id$
+ * @version   SVN: $Id: products_list.css 2190 2010-03-09 23:59:26Z vvs $
  * @link      http://www.litecommerce.com/
  * @since     3.0.0
  */
@@ -94,6 +94,7 @@
 }
 
 .list-head .sort-box a {
+  text-decoration: none;
   font-size: 1.2em;
 }
 
@@ -250,6 +251,10 @@
 
 .list-body-table tr td.product-price-column {
   text-align: right;
+}
+
+.list-body-table tr td.product-name-column {
+  width: 100%;
 }
 
 /* Modal wait screen */
