[*] Added a table layout for the shopping cart page
git-svn-id: svn://svn.crtdev.local/repo/xlite/main@2253 194c3f1c-803d-db11-9c9e-000e0c8563f3

--- a/test/skins/drupal/en/shopping_cart/cart.css
+++ b/test/skins/drupal/en/shopping_cart/cart.css
@@ -1,25 +1,11 @@
-#shopping-cart .cart-items,
 #shopping-cart .cart-sums
 {
   list-style: none;
 }
 
-#shopping-cart .cart-items li
+#shopping-cart .item-sums
 {
-  clear: both;
-}
-
-#shopping-cart .delete-from-cart,
-#shopping-cart .item-thumbnail,
-#shopping-cart .item-info
-{
-  float: left;
-}
-
-#shopping-cart .item-actions,
-#shopping-cart .cart-totals
-{
-  float: right;
+  white-space: nowrap;
 }
 
 #shopping-cart .item-actions
@@ -32,4 +18,9 @@
   background: transparent url(img/cart-item-delete.gif) no-repeat top left;
   width: 13px;
   height: 13px;
+}
+
+#shopping-cart .cart-totals
+{
+  float: right;
 }
